# Equity-Research-Copilot

./: .gitignore  AGENTS.md  DESIGN.md  PROJECT_PLAN.md  README.md  README.zh-CN.md  compose.yaml
backend/: .env.example  .gitignore  aapl_retrieval_eval.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_create_jobs_table.py  0002_create_sec_ingestion_tables.py  0003_create_sec2md_tables.py  0003_filing_processing_tables.py  (+7 more)
backend/app/: main.py
backend/evals/: answer_gold_eval.json  m5a_retrieval_eval.json  query_planner_ambiguous_slot_eval.json  retrieval_gold_eval.json
backend/tests/: test_answer_context.py  test_answer_eval.py  test_answer_generation.py  test_app.py  test_chunk_embedding_models.py  test_chunk_embeddings.py  test_companies_api.py  test_company_lookup.py  test_config.py  test_database.py  test_filing_chunking.py  test_filing_document_service.py  test_filing_metadata.py  test_filing_processing.py  test_filing_processing_models.py  test_filing_sec2md.py  test_filing_sec2md_models.py  test_filing_text.py  test_filings_api.py  test_jobs_api.py  test_jobs_model.py  test_logging.py  test_migrations.py  test_perf_caches.py  test_query_planner.py  test_query_planner_eval.py  test_research_agent.py  test_research_api.py  test_research_run_service.py  test_research_run_trace.py  test_retrieval.py  test_retrieval_dump.py  test_retrieval_gold_eval.py  test_sec_cache.py  test_sec_client.py  test_sec_ingestion.py  test_sec_ingestion_models.py  test_xbrl_metrics.py  test_xbrl_metrics_models.py
(+80 files in other folders)
